culpert-cli/tests/snapshots/snapshots__diff_text_flat.snap
---
source: culpert-cli/tests/snapshots.rs
expression: out
---
Allocation diff:
  before:  [BEFORE]
           total 1.50 MB (estimated)
  after:   [AFTER]
           total 1.75 MB (estimated)  Δ = +256.00 KB  (+16.67%)
  rate:    64.00 KB/alloc
  filter:  show changes ≥ 4.00 KB AND ≥ 5.00%

Regressions:
  span                        before         after             Δ        Δ%
  --------------------  ------------  ------------  ------------  --------
  parse_input              512.00 KB     768.00 KB    +256.00 KB   +50.00%

Improvements: none

1 span(s) suppressed by thresholds.
