culpert-cli/tests/snapshots/snapshots__flamegraph_folded_default.snap
---
source: culpert-cli/tests/snapshots.rs
expression: out
---
build_response;my_app::response::build 1048576
parse_input;my_app::parse::run 524288
