culpert-cli/tests/snapshots/snapshots__flamegraph_folded_no_annotate.snap
---
source: culpert-cli/tests/snapshots.rs
expression: out
---
my_app::parse::run 524288
my_app::response::build 1048576
