culpert-cli/tests/snapshots/snapshots__flamegraph_folded_span_filter.snap
---
source: culpert-cli/tests/snapshots.rs
expression: out
---
parse_input;my_app::parse::run 524288
