culpert-cli/tests/snapshots/snapshots__flamegraph_folded_weight_samples.snap
---
source: culpert-cli/tests/snapshots.rs
expression: out
---
build_response;my_app::response::build 16
parse_input;my_app::parse::run 8
